[gd_scene load_steps=5 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://grey_style.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/ground_tileset.tres" type="TileSet" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" type="Node2D" parent="."]

[node name="Navigation" type="Navigation2D" parent="Map"]

[node name="TileMap" type="TileMap" parent="Map/Navigation"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 32 )
format = 1
tile_data = PoolIntArray( -1, 2, 196609, -65536, 2, 3, -65535, 2, 3, -65534, 2, 3, -65533, 2, 3, -65532, 2, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65500, 1, 0, -65499, 1, 0, -65498, 1, 0, -65497, 1, 0, -65496, 1, 0, -65495, 1, 0, -65494, 1, 0, -65493, 1, 0, -65492, 1, 0, -65491, 1, 0, -65490, 1, 0, -65489, 1, 0, -65488, 1, 0, -65487, 1, 0, -65486, 1, 0, -65485, 1, 0, -65484, 1, 0, -65483, 1, 0, -65482, 1, 0, -65481, 1, 0, -65480, 1, 0, -65479, 2, 196609, -65478, 2, 3, -65477, 2, 3, -65476, 2, 3, -65475, 2, 3, -65474, 2, 3, -65473, 2, 3, -65472, 2, 3, -65471, 2, 0, 65535, 2, 1, 0, 2, 65538, 1, 2, 65538, 2, 2, 65538, 3, 2, 65538, 4, 2, 131075, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 53, 1, 0, 54, 1, 0, 55, 1, 0, 56, 1, 0, 57, 2, 131072, 58, 2, 131074, 59, 2, 65538, 60, 2, 65538, 61, 2, 65538, 62, 2, 65538, 63, 2, 65538, 64, 2, 65538, 65, 2, 131075, 131071, 2, 1, 65536, 2, 65538, 65537, 2, 65538, 65538, 2, 65538, 65539, 2, 65539, 65540, 2, 196611, 65541, 1, 0, 65542, 1, 0, 65543, 0, 262147, 65544, 0, 65541, 65545, 0, 65541, 65546, 0, 65541, 65547, 0, 65541, 65548, 0, 65538, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 0, 262147, 65561, 0, 65541, 65562, 0, 65541, 65563, 0, 65541, 65564, 0, 65538, 65565, 1, 0, 65566, 1, 0, 65567, 1, 0, 65568, 1, 0, 65569, 1, 0, 65570, 1, 0, 65571, 0, 262147, 65572, 0, 65541, 65573, 0, 65541, 65574, 0, 65541, 65575, 0, 65541, 65576, 0, 65541, 65577, 0, 65541, 65578, 0, 65538, 65579, 1, 0, 65580, 1, 0, 65581, 1, 0, 65582, 1, 0, 65583, 1, 0, 65584, 1, 0, 65585, 1, 0, 65586, 1, 0, 65587, 1, 0, 65588, 1, 0, 65589, 1, 0, 65590, 1, 0, 65591, 1, 0, 65592, 1, 0, 65593, 1, 0, 65594, 2, 131072, 65595, 2, 131073, 65596, 2, 131073, 65597, 2, 131074, 65598, 2, 65538, 65599, 2, 65538, 65600, 2, 65538, 65601, 2, 131075, 196607, 2, 1, 131072, 2, 65538, 131073, 2, 65538, 131074, 2, 65539, 131075, 2, 196611, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 0, 196610, 131080, 0, 196611, 131081, 0, 196611, 131082, 0, 196612, 131083, 0, 131076, 131084, 0, 196613, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 0, 262147, 131093, 0, 65541, 131094, 0, 65541, 131095, 0, 65541, 131096, 0, 131075, 131097, 0, 131076, 131098, 0, 131076, 131099, 0, 131076, 131100, 0, 65540, 131101, 0, 65541, 131102, 0, 65538, 131103, 1, 0, 131104, 1, 0, 131105, 0, 262147, 131106, 0, 65541, 131107, 0, 131075, 131108, 0, 131076, 131109, 0, 131076, 131110, 0, 131076, 131111, 0, 131076, 131112, 0, 131076, 131113, 0, 131076, 131114, 0, 65540, 131115, 0, 65541, 131116, 0, 65541, 131117, 0, 65541, 131118, 0, 65541, 131119, 0, 65538, 131120, 1, 0, 131121, 1, 0, 131122, 1, 0, 131123, 0, 262147, 131124, 0, 65541, 131125, 0, 65541, 131126, 0, 65541, 131127, 0, 65541, 131128, 0, 65538, 131129, 1, 0, 131130, 1, 0, 131131, 1, 0, 131132, 1, 0, 131133, 2, 1, 131134, 2, 65538, 131135, 2, 65538, 131136, 2, 65538, 131137, 2, 131075, 262143, 2, 131072, 196608, 2, 131073, 196609, 2, 131073, 196610, 2, 196611, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 0, 65539, 196619, 0, 131076, 196620, 0, 65540, 196621, 0, 65538, 196622, 1, 0, 196623, 0, 262147, 196624, 0, 65541, 196625, 0, 65541, 196626, 0, 65541, 196627, 0, 65541, 196628, 0, 131075, 196629, 0, 131076, 196630, 0, 131076, 196631, 0, 131076, 196632, 0, 131076, 196633, 0, 131076, 196634, 0, 131076, 196635, 0, 131076, 196636, 0, 131076, 196637, 0, 131076, 196638, 0, 65540, 196639, 0, 65541, 196640, 0, 65541, 196641, 0, 131075, 196642, 0, 131076, 196643, 0, 131076, 196644, 0, 131076, 196645, 0, 131076, 196646, 0, 131076, 196647, 0, 131076, 196648, 0, 131076, 196649, 0, 131076, 196650, 0, 131076, 196651, 0, 131076, 196652, 0, 131076, 196653, 0, 131076, 196654, 0, 131076, 196655, 0, 65540, 196656, 0, 65541, 196657, 0, 65541, 196658, 0, 65541, 196659, 0, 131075, 196660, 0, 131076, 196661, 0, 131076, 196662, 0, 131076, 196663, 0, 131076, 196664, 0, 196613, 196665, 1, 0, 196666, 1, 0, 196667, 1, 0, 196668, 2, 196609, 196669, 2, 65537, 196670, 2, 65538, 196671, 2, 65538, 196672, 2, 65538, 196673, 2, 131075, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 0, 262147, 262153, 0, 65541, 262154, 0, 131075, 262155, 0, 131077, 262156, 0, 196611, 262157, 0, 262149, 262158, 1, 0, 262159, 0, 196610, 262160, 0, 196611, 262161, 0, 196611, 262162, 0, 196611, 262163, 0, 196612, 262164, 0, 131076, 262165, 0, 131076, 262166, 0, 131076, 262167, 0, 131076, 262168, 0, 131076, 262169, 0, 131076, 262170, 0, 131076, 262171, 0, 131076, 262172, 0, 131076, 262173, 0, 131076, 262174, 0, 131076, 262175, 0, 131076, 262176, 0, 131076, 262177, 0, 131076, 262178, 0, 131076, 262179, 0, 131076, 262180, 0, 131077, 262181, 0, 196611, 262182, 0, 196611, 262183, 0, 196611, 262184, 0, 196611, 262185, 0, 196611, 262186, 0, 196611, 262187, 0, 196611, 262188, 0, 196612, 262189, 0, 131076, 262190, 0, 131076, 262191, 0, 131076, 262192, 0, 131076, 262193, 0, 131076, 262194, 0, 131077, 262195, 0, 196611, 262196, 0, 196611, 262197, 0, 196612, 262198, 0, 131076, 262199, 0, 131077, 262200, 0, 262149, 262201, 1, 0, 262202, 1, 0, 262203, 1, 0, 262204, 2, 1, 262205, 2, 65538, 262206, 2, 65538, 262207, 2, 65538, 262208, 2, 65538, 262209, 2, 131075, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 0, 196610, 327689, 0, 196611, 327690, 0, 196611, 327691, 0, 262149, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 0, 196610, 327700, 0, 196611, 327701, 0, 196611, 327702, 0, 196611, 327703, 0, 196611, 327704, 0, 196612, 327705, 0, 131076, 327706, 0, 131076, 327707, 0, 131076, 327708, 0, 131076, 327709, 0, 131076, 327710, 0, 131076, 327711, 0, 131076, 327712, 0, 131076, 327713, 0, 131076, 327714, 0, 131076, 327715, 0, 131077, 327716, 0, 262149, 327717, 1, 0, 327718, 1, 0, 327719, 1, 0, 327720, 1, 0, 327721, 1, 0, 327722, 1, 0, 327723, 1, 0, 327724, 0, 196610, 327725, 0, 196612, 327726, 0, 131076, 327727, 0, 131076, 327728, 0, 131076, 327729, 0, 131076, 327730, 0, 196613, 327731, 1, 0, 327732, 1, 0, 327733, 0, 196610, 327734, 0, 196611, 327735, 0, 262149, 327736, 1, 0, 327737, 1, 0, 327738, 1, 0, 327739, 1, 0, 327740, 2, 1, 327741, 2, 65538, 327742, 2, 65538, 327743, 2, 65538, 327744, 2, 65538, 327745, 2, 131075, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 0, 262147, 393219, 0, 65541, 393220, 0, 65541, 393221, 0, 65538, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 0, 65539, 393241, 0, 131076, 393242, 0, 131076, 393243, 0, 131076, 393244, 0, 131076, 393245, 0, 131076, 393246, 0, 131076, 393247, 0, 131076, 393248, 0, 131076, 393249, 0, 131076, 393250, 0, 131076, 393251, 0, 196613, 393252, 1, 0, 393253, 1, 0, 393254, 1, 0, 393255, 1, 0, 393256, 1, 0, 393257, 1, 0, 393258, 1, 0, 393259, 1, 0, 393260, 1, 0, 393261, 0, 65539, 393262, 0, 131076, 393263, 0, 131076, 393264, 0, 131076, 393265, 0, 131077, 393266, 0, 262149, 393267, 1, 0, 393268, 1, 0, 393269, 1, 0, 393270, 1, 0, 393271, 1, 0, 393272, 1, 0, 393273, 1, 0, 393274, 1, 0, 393275, 2, 196609, 393276, 2, 65537, 393277, 2, 65538, 393278, 2, 65538, 393279, 2, 65538, 393280, 2, 65538, 393281, 2, 131075, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 0, 196610, 458755, 0, 196611, 458756, 0, 196611, 458757, 0, 262149, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 0, 262147, 458776, 0, 131075, 458777, 0, 131076, 458778, 0, 131076, 458779, 0, 131076, 458780, 0, 131076, 458781, 0, 131076, 458782, 0, 131076, 458783, 0, 131076, 458784, 0, 131076, 458785, 0, 131076, 458786, 0, 131076, 458787, 0, 65540, 458788, 0, 65538, 458789, 1, 0, 458790, 1, 0, 458791, 1, 0, 458792, 1, 0, 458793, 1, 0, 458794, 1, 0, 458795, 0, 262147, 458796, 0, 65541, 458797, 0, 131075, 458798, 0, 131076, 458799, 0, 131076, 458800, 0, 131076, 458801, 0, 196613, 458802, 1, 0, 458803, 1, 0, 458804, 1, 0, 458805, 1, 0, 458806, 1, 0, 458807, 1, 0, 458808, 1, 0, 458809, 2, 196609, 458810, 2, 3, 458811, 2, 65537, 458812, 2, 65538, 458813, 2, 65538, 458814, 2, 65538, 458815, 2, 65538, 458816, 2, 65538, 458817, 2, 131075, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 0, 262147, 524309, 0, 65541, 524310, 0, 65541, 524311, 0, 131075, 524312, 0, 131076, 524313, 0, 131076, 524314, 0, 131076, 524315, 0, 131076, 524316, 0, 131076, 524317, 0, 131076, 524318, 0, 131076, 524319, 0, 131076, 524320, 0, 131076, 524321, 0, 131076, 524322, 0, 131076, 524323, 0, 131076, 524324, 0, 65540, 524325, 0, 65541, 524326, 0, 65541, 524327, 0, 65541, 524328, 0, 65541, 524329, 0, 65541, 524330, 0, 65541, 524331, 0, 131075, 524332, 0, 131076, 524333, 0, 131076, 524334, 0, 131076, 524335, 0, 131076, 524336, 0, 131076, 524337, 0, 65540, 524338, 0, 65538, 524339, 1, 0, 524340, 1, 0, 524341, 1, 0, 524342, 1, 0, 524343, 1, 0, 524344, 1, 0, 524345, 2, 1, 524346, 2, 65538, 524347, 2, 65538, 524348, 2, 65538, 524349, 2, 65538, 524350, 2, 65538, 524351, 2, 65538, 524352, 2, 65538, 524353, 2, 131075, 655359, 2, 196609, 589824, 2, 3, 589825, 2, 3, 589826, 2, 3, 589827, 2, 3, 589828, 2, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 0, 262147, 589841, 0, 65541, 589842, 0, 65541, 589843, 0, 65541, 589844, 0, 131075, 589845, 0, 131076, 589846, 0, 131076, 589847, 0, 131076, 589848, 0, 131076, 589849, 0, 131076, 589850, 0, 131076, 589851, 0, 131076, 589852, 0, 131076, 589853, 0, 131076, 589854, 0, 131076, 589855, 0, 131076, 589856, 0, 131076, 589857, 0, 131076, 589858, 0, 131076, 589859, 0, 131076, 589860, 0, 131076, 589861, 0, 131076, 589862, 0, 131076, 589863, 0, 131077, 589864, 0, 196611, 589865, 0, 196611, 589866, 0, 196611, 589867, 0, 196611, 589868, 0, 196611, 589869, 0, 196612, 589870, 0, 131076, 589871, 0, 131076, 589872, 0, 131076, 589873, 0, 131076, 589874, 0, 65540, 589875, 0, 65538, 589876, 1, 0, 589877, 1, 0, 589878, 1, 0, 589879, 1, 0, 589880, 2, 196609, 589881, 2, 65537, 589882, 2, 65538, 589883, 2, 65538, 589884, 2, 65538, 589885, 2, 65538, 589886, 2, 65538, 589887, 2, 65538, 589888, 2, 65538, 589889, 2, 131075, 720895, 2, 1, 655360, 2, 65538, 655361, 2, 65538, 655362, 2, 65538, 655363, 2, 65538, 655364, 2, 131075, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 0, 262147, 655374, 0, 65541, 655375, 0, 65541, 655376, 0, 131075, 655377, 0, 131076, 655378, 0, 131076, 655379, 0, 131076, 655380, 0, 131076, 655381, 0, 131076, 655382, 0, 131076, 655383, 0, 131076, 655384, 0, 131076, 655385, 0, 131076, 655386, 0, 131076, 655387, 0, 131076, 655388, 0, 131076, 655389, 0, 131076, 655390, 0, 131077, 655391, 0, 196611, 655392, 0, 196611, 655393, 0, 196611, 655394, 0, 196611, 655395, 0, 196611, 655396, 0, 196612, 655397, 0, 131076, 655398, 0, 131077, 655399, 0, 262149, 655400, 1, 0, 655401, 1, 0, 655402, 1, 0, 655403, 1, 0, 655404, 1, 0, 655405, 0, 65539, 655406, 0, 131076, 655407, 0, 131076, 655408, 0, 131076, 655409, 0, 131076, 655410, 0, 131077, 655411, 0, 262149, 655412, 1, 0, 655413, 1, 0, 655414, 1, 0, 655415, 1, 0, 655416, 2, 1, 655417, 2, 65538, 655418, 2, 65538, 655419, 2, 65538, 655420, 2, 65538, 655421, 2, 65538, 655422, 2, 65538, 655423, 2, 65538, 655424, 2, 65538, 655425, 2, 131075, 786431, 2, 1, 720896, 2, 65538, 720897, 2, 65538, 720898, 2, 65538, 720899, 2, 65538, 720900, 2, 131075, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 0, 262147, 720907, 0, 65541, 720908, 0, 65541, 720909, 0, 131075, 720910, 0, 131076, 720911, 0, 131076, 720912, 0, 131076, 720913, 0, 131076, 720914, 0, 131076, 720915, 0, 131077, 720916, 0, 196611, 720917, 0, 196611, 720918, 0, 196611, 720919, 0, 196611, 720920, 0, 196611, 720921, 0, 196611, 720922, 0, 196612, 720923, 0, 131076, 720924, 0, 131076, 720925, 0, 131077, 720926, 0, 262149, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 1, 0, 720931, 1, 0, 720932, 0, 196610, 720933, 0, 196611, 720934, 0, 262149, 720935, 1, 0, 720936, 1, 0, 720937, 1, 0, 720938, 0, 262147, 720939, 0, 65541, 720940, 0, 65541, 720941, 0, 131075, 720942, 0, 131076, 720943, 0, 131076, 720944, 0, 131076, 720945, 0, 131077, 720946, 0, 262149, 720947, 1, 0, 720948, 1, 0, 720949, 1, 0, 720950, 1, 0, 720951, 2, 196609, 720952, 2, 65537, 720953, 2, 65538, 720954, 2, 65538, 720955, 2, 65538, 720956, 2, 65538, 720957, 2, 65538, 720958, 2, 65538, 720959, 2, 65538, 720960, 2, 65538, 720961, 2, 131075, 851967, 2, 1, 786432, 2, 65538, 786433, 2, 65538, 786434, 2, 65539, 786435, 2, 131073, 786436, 2, 196611, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 0, 262147, 786441, 0, 65541, 786442, 0, 131075, 786443, 0, 131076, 786444, 0, 131076, 786445, 0, 131076, 786446, 0, 131076, 786447, 0, 131077, 786448, 0, 196611, 786449, 0, 196611, 786450, 0, 196611, 786451, 0, 262149, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 0, 65539, 786459, 0, 131076, 786460, 0, 131076, 786461, 0, 196613, 786462, 1, 0, 786463, 1, 0, 786464, 1, 0, 786465, 1, 0, 786466, 1, 0, 786467, 1, 0, 786468, 1, 0, 786469, 1, 0, 786470, 1, 0, 786471, 1, 0, 786472, 1, 0, 786473, 1, 0, 786474, 0, 196610, 786475, 0, 196612, 786476, 0, 131076, 786477, 0, 131076, 786478, 0, 131076, 786479, 0, 131076, 786480, 0, 131076, 786481, 0, 196613, 786482, 1, 0, 786483, 1, 0, 786484, 1, 0, 786485, 1, 0, 786486, 1, 0, 786487, 2, 131072, 786488, 2, 131073, 786489, 2, 131073, 786490, 2, 131074, 786491, 2, 65538, 786492, 2, 65538, 786493, 2, 65538, 786494, 2, 65538, 786495, 2, 65538, 786496, 2, 65538, 786497, 2, 131075, 917503, 2, 1, 851968, 2, 65538, 851969, 2, 65539, 851970, 2, 196611, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 0, 262147, 851976, 0, 131075, 851977, 0, 131076, 851978, 0, 131076, 851979, 0, 131076, 851980, 0, 131076, 851981, 0, 131076, 851982, 0, 131076, 851983, 0, 196613, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 0, 262147, 851994, 0, 131075, 851995, 0, 131076, 851996, 0, 131076, 851997, 0, 196613, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 852004, 1, 0, 852005, 1, 0, 852006, 1, 0, 852007, 1, 0, 852008, 1, 0, 852009, 1, 0, 852010, 1, 0, 852011, 0, 65539, 852012, 0, 131076, 852013, 0, 131076, 852014, 0, 131077, 852015, 0, 196611, 852016, 0, 196611, 852017, 0, 262149, 852018, 1, 0, 852019, 1, 0, 852020, 1, 0, 852021, 1, 0, 852022, 1, 0, 852023, 1, 0, 852024, 1, 0, 852025, 1, 0, 852026, 2, 131072, 852027, 2, 131073, 852028, 2, 131073, 852029, 2, 131074, 852030, 2, 65538, 852031, 2, 65538, 852032, 2, 65538, 852033, 2, 131075, 983039, 2, 131072, 917504, 2, 131073, 917505, 2, 196611, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 0, 262147, 917510, 0, 65541, 917511, 0, 131075, 917512, 0, 131077, 917513, 0, 196611, 917514, 0, 196612, 917515, 0, 131076, 917516, 0, 131076, 917517, 0, 131076, 917518, 0, 131076, 917519, 0, 65540, 917520, 0, 65541, 917521, 0, 65541, 917522, 0, 65541, 917523, 0, 65538, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 0, 196610, 917530, 0, 196611, 917531, 0, 196612, 917532, 0, 131076, 917533, 0, 196613, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917541, 1, 0, 917542, 1, 0, 917543, 1, 0, 917544, 1, 0, 917545, 0, 262147, 917546, 0, 65541, 917547, 0, 131075, 917548, 0, 131076, 917549, 0, 131077, 917550, 0, 262149, 917551, 1, 0, 917552, 1, 0, 917553, 1, 0, 917554, 1, 0, 917555, 1, 0, 917556, 1, 0, 917557, 1, 0, 917558, 1, 0, 917559, 1, 0, 917560, 1, 0, 917561, 1, 0, 917562, 1, 0, 917563, 1, 0, 917564, 1, 0, 917565, 2, 131072, 917566, 2, 131073, 917567, 2, 131073, 917568, 2, 131073, 917569, 2, 196611, 1048575, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 0, 262147, 983044, 0, 65541, 983045, 0, 262148, 983046, 0, 196611, 983047, 0, 196611, 983048, 0, 262149, 983049, 1, 0, 983050, 0, 196610, 983051, 0, 196611, 983052, 0, 196612, 983053, 0, 131076, 983054, 0, 131076, 983055, 0, 131076, 983056, 0, 131076, 983057, 0, 131076, 983058, 0, 131077, 983059, 0, 262149, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 0, 196610, 983068, 0, 196611, 983069, 0, 262149, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 983079, 1, 0, 983080, 1, 0, 983081, 0, 196610, 983082, 0, 196611, 983083, 0, 196611, 983084, 0, 196611, 983085, 0, 262149, 983086, 1, 0, 983087, 1, 0, 983088, 1, 0, 983089, 1, 0, 983090, 1, 0, 983091, 1, 0, 983092, 1, 0, 983093, 1, 0, 983094, 1, 0, 983095, 0, 262147, 983096, 0, 65541, 983097, 0, 65541, 983098, 0, 65541, 983099, 0, 65541, 983100, 0, 65538, 983101, 1, 0, 983102, 1, 0, 983103, 1, 0, 983104, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 0, 196610, 1048580, 0, 196611, 1048581, 0, 262149, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 0, 196610, 1048589, 0, 196611, 1048590, 0, 196611, 1048591, 0, 196611, 1048592, 0, 196611, 1048593, 0, 196611, 1048594, 0, 262149, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048610, 1, 0, 1048611, 1, 0, 1048612, 1, 0, 1048613, 1, 0, 1048614, 1, 0, 1048615, 1, 0, 1048616, 1, 0, 1048617, 1, 0, 1048618, 1, 0, 1048619, 1, 0, 1048620, 1, 0, 1048621, 1, 0, 1048622, 1, 0, 1048623, 1, 0, 1048624, 1, 0, 1048625, 1, 0, 1048626, 1, 0, 1048627, 1, 0, 1048628, 0, 262147, 1048629, 0, 65541, 1048630, 0, 65541, 1048631, 0, 131075, 1048632, 0, 131076, 1048633, 0, 131076, 1048634, 0, 131076, 1048635, 0, 131076, 1048636, 0, 65540, 1048637, 0, 65538, 1048638, 1, 0, 1048639, 1, 0, 1048640, 1, 0, 1179647, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 2, 196609, 1114133, 2, 3, 1114134, 2, 3, 1114135, 2, 3, 1114136, 2, 3, 1114137, 2, 3, 1114138, 2, 3, 1114139, 2, 0, 1114140, 1, 0, 1114141, 1, 0, 1114142, 1, 0, 1114143, 1, 0, 1114144, 1, 0, 1114145, 0, 262147, 1114146, 0, 65541, 1114147, 0, 65541, 1114148, 0, 65538, 1114149, 1, 0, 1114150, 1, 0, 1114151, 1, 0, 1114152, 1, 0, 1114153, 1, 0, 1114154, 1, 0, 1114155, 1, 0, 1114156, 1, 0, 1114157, 1, 0, 1114158, 1, 0, 1114159, 1, 0, 1114160, 1, 0, 1114161, 0, 262147, 1114162, 0, 65541, 1114163, 0, 65541, 1114164, 0, 131075, 1114165, 0, 131076, 1114166, 0, 131076, 1114167, 0, 131076, 1114168, 0, 131076, 1114169, 0, 131076, 1114170, 0, 131076, 1114171, 0, 131076, 1114172, 0, 131077, 1114173, 0, 262149, 1114174, 1, 0, 1114175, 1, 0, 1114176, 1, 0, 1245183, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 2, 196609, 1179665, 2, 3, 1179666, 2, 3, 1179667, 2, 3, 1179668, 2, 65537, 1179669, 2, 65538, 1179670, 2, 65538, 1179671, 2, 65538, 1179672, 2, 65538, 1179673, 2, 65538, 1179674, 2, 65538, 1179675, 2, 131075, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1179681, 0, 196610, 1179682, 0, 196611, 1179683, 0, 196611, 1179684, 0, 262149, 1179685, 1, 0, 1179686, 1, 0, 1179687, 1, 0, 1179688, 1, 0, 1179689, 1, 0, 1179690, 1, 0, 1179691, 1, 0, 1179692, 1, 0, 1179693, 1, 0, 1179694, 1, 0, 1179695, 1, 0, 1179696, 1, 0, 1179697, 0, 196610, 1179698, 0, 196611, 1179699, 0, 196611, 1179700, 0, 196611, 1179701, 0, 196611, 1179702, 0, 196611, 1179703, 0, 196611, 1179704, 0, 196611, 1179705, 0, 196611, 1179706, 0, 196611, 1179707, 0, 196611, 1179708, 0, 262149, 1179709, 1, 0, 1179710, 1, 0, 1179711, 1, 0, 1179712, 1, 0, 1310719, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0, 1245198, 2, 196609, 1245199, 2, 3, 1245200, 2, 65537, 1245201, 2, 65538, 1245202, 2, 65538, 1245203, 2, 65538, 1245204, 2, 65538, 1245205, 2, 65538, 1245206, 2, 65538, 1245207, 2, 65538, 1245208, 2, 65538, 1245209, 2, 65538, 1245210, 2, 65538, 1245211, 2, 2, 1245212, 2, 0, 1245213, 1, 0, 1245214, 1, 0, 1245215, 1, 0, 1245216, 1, 0, 1245217, 1, 0, 1245218, 1, 0, 1245219, 1, 0, 1245220, 1, 0, 1245221, 1, 0, 1245222, 1, 0, 1245223, 1, 0, 1245224, 1, 0, 1245225, 1, 0, 1245226, 1, 0, 1245227, 1, 0, 1245228, 1, 0, 1245229, 1, 0, 1245230, 1, 0, 1245231, 1, 0, 1245232, 1, 0, 1245233, 1, 0, 1245234, 1, 0, 1245235, 1, 0, 1245236, 1, 0, 1245237, 1, 0, 1245238, 1, 0, 1245239, 1, 0, 1245240, 1, 0, 1245241, 1, 0, 1245242, 1, 0, 1245243, 1, 0, 1245244, 1, 0, 1245245, 1, 0, 1245246, 1, 0, 1245247, 1, 0, 1245248, 1, 0, 1376255, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 2, 131072, 1310735, 2, 131073, 1310736, 2, 131073, 1310737, 2, 131073, 1310738, 2, 131073, 1310739, 2, 131073, 1310740, 2, 131073, 1310741, 2, 131073, 1310742, 2, 131073, 1310743, 2, 131073, 1310744, 2, 131073, 1310745, 2, 131073, 1310746, 2, 131073, 1310747, 2, 131073, 1310748, 2, 196611, 1310749, 1, 0, 1310750, 1, 0, 1310751, 1, 0, 1310752, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1310755, 1, 0, 1310756, 1, 0, 1310757, 1, 0, 1310758, 1, 0, 1310759, 1, 0, 1310760, 1, 0, 1310761, 1, 0, 1310762, 1, 0, 1310763, 1, 0, 1310764, 1, 0, 1310765, 1, 0, 1310766, 1, 0, 1310767, 1, 0, 1310768, 1, 0, 1310769, 1, 0, 1310770, 1, 0, 1310771, 1, 0, 1310772, 1, 0, 1310773, 1, 0, 1310774, 1, 0, 1310775, 1, 0, 1310776, 1, 0, 1310777, 1, 0, 1310778, 1, 0, 1310779, 1, 0, 1310780, 1, 0, 1310781, 1, 0, 1310782, 1, 0, 1310783, 1, 0, 1310784, 1, 0 )

[node name="Characters" type="Node" parent="Map"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="Menu" type="PanelContainer" parent="UI"]
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.6
margin_right = 14.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="UI/Menu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 211.8
margin_bottom = 263.0
alignment = 2

[node name="Label" type="Label" parent="UI/Menu/VBox"]
margin_right = 204.0
margin_bottom = 14.0
size_flags_vertical = 2
text = "MENU"
align = 1

[node name="HSeparator" type="HSeparator" parent="UI/Menu/VBox"]
margin_top = 72.0
margin_right = 204.0
margin_bottom = 76.0

[node name="Label2" type="Label" parent="UI/Menu/VBox"]
margin_top = 80.0
margin_right = 204.0
margin_bottom = 94.0
text = "Player Name:"

[node name="HBox" type="HBoxContainer" parent="UI/Menu/VBox"]
margin_top = 98.0
margin_right = 204.0
margin_bottom = 122.0

[node name="PlayerName" type="LineEdit" parent="UI/Menu/VBox/HBox"]
margin_right = 136.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Randomize" type="Button" parent="UI/Menu/VBox/HBox"]
margin_left = 140.0
margin_right = 204.0
margin_bottom = 24.0
text = "Random"

[node name="HSeparator2" type="HSeparator" parent="UI/Menu/VBox"]
margin_top = 126.0
margin_right = 204.0
margin_bottom = 130.0

[node name="Label3" type="Label" parent="UI/Menu/VBox"]
margin_top = 134.0
margin_right = 204.0
margin_bottom = 148.0
text = "Server Address:"

[node name="ServerAddress" type="LineEdit" parent="UI/Menu/VBox"]
margin_top = 152.0
margin_right = 204.0
margin_bottom = 176.0
text = "127.0.0.1:9876"

[node name="StartServer" type="Button" parent="UI/Menu/VBox"]
margin_top = 180.0
margin_right = 204.0
margin_bottom = 200.0
text = "start server"

[node name="JoinGame" type="Button" parent="UI/Menu/VBox"]
margin_top = 204.0
margin_right = 204.0
margin_bottom = 224.0
text = "join game"

[node name="HSeparator3" type="HSeparator" parent="UI/Menu/VBox"]
margin_top = 228.0
margin_right = 204.0
margin_bottom = 232.0

[node name="Exit" type="Button" parent="UI/Menu/VBox"]
margin_top = 236.0
margin_right = 204.0
margin_bottom = 256.0
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="VBoxContainer" parent="UI"]
anchor_left = 0.01
anchor_top = 0.7
anchor_right = 0.3
anchor_bottom = 0.99
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Console"]
margin_right = 296.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = ExtResource( 3 )

[connection signal="pressed" from="UI/Menu/VBox/HBox/Randomize" to="UI" method="_on_Randomize_pressed"]
[connection signal="pressed" from="UI/Menu/VBox/StartServer" to="UI" method="_on_StartServer_pressed"]
[connection signal="pressed" from="UI/Menu/VBox/JoinGame" to="UI" method="_on_JoinGame_pressed"]
[connection signal="pressed" from="UI/Menu/VBox/Exit" to="UI" method="_on_Exit_pressed"]
